# ITKAdditions

LambdaImageAdaptor/: CMakeLists.txt  LambdaImageAdaptor.cpp  itkLambdaImageAdaptor.h
NormImageAdaptor/: CMakeLists.txt
